# streamlit-analysis-platform

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
deploy/nginx/: analysis-platform.conf  default.conf
deploy/server/: analysis-platform.service.example  install-user.sh  streamlit-analysis.service.example
deploy/windows/: start-platform.ps1  stop-platform.ps1
docs/: Streamlit数据分析平台项目计划书.md  test-manager统一登录接口约定.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
models/arc_recognition/: mlp_weights.pth  mlp_weights_numpy.npz  model_metadata.json  norm_params.npz
pages/: 01_数据浏览.py  02_分析中心.py  03_历史任务.py  04_系统管理.py  05_电弧识别.py
scripts/: create_admin.py  generate_demo_data.py  init_db.py  scan_datasets.py  sync_sftp.py  watch_datasets.py
src/: __init__.py  config.py  db.py
src/analysis/: __init__.py  arc_features.py  arc_model.py  paired.py  registry.py  selection.py
src/api/: __init__.py  app.py  auth.py  routes.py  serialization.py
src/auth/: __init__.py  service.py  ui.py
src/components/: __init__.py  arc_stream.py  plotly_click.py  plots.py
src/parsers/: __init__.py  bin_parser.py  mat_parser.py
src/services/: arc_stream.py  datasets.py  jobs.py  paths.py  sftp.py
src/ui/: __init__.py  theme.py
tests/: test_algorithms.py  test_api.py  test_arc_stream.py  test_multi_fft_output.py  test_parsers.py  test_selection.py  test_services.py  test_sftp.py  test_watcher.py
(+13 files in other folders)
