[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-analysis-platform"
version = "0.1.0"
description = "面向服务器采集数据的内部 Streamlit 分析平台"
requires-python = ">=3.12,<3.14"
dependencies = [
  "streamlit>=1.46,<2",
  "numpy>=2.0,<3",
  "pandas>=2.2,<3",
  "scipy>=1.14,<2",
  "h5py>=3.11,<4",
  "PyWavelets>=1.7,<2",
  "matplotlib>=3.9,<4",
  "plotly>=6.0,<7",
  "argon2-cffi>=23.1,<26",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
